en/1.x/_sources/facts/docker.rst.txt
Docker Facts
------------

:code:`docker.DockerContainer`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerContainer, object_id)


Returns ``docker inspect`` output for a single Docker container.



:code:`docker.DockerContainers`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerContainers)


Returns ``docker inspect`` output for all Docker containers.



:code:`docker.DockerImage`
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerImage, object_id)


Returns ``docker inspect`` output for a single Docker image.



:code:`docker.DockerImages`
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerImages)


Returns ``docker inspect`` output for all Docker images.



:code:`docker.DockerNetwork`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerNetwork, object_id)


Returns ``docker inspect`` output for a single Docker network.



:code:`docker.DockerNetworks`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerNetworks)


Returns ``docker inspect`` output for all Docker networks.



:code:`docker.DockerSingleMixin`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerSingleMixin, object_id)


:code:`docker.DockerSystemInfo`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerSystemInfo)


Returns ``docker system info`` output in JSON format.


