en/3.x/_sources/facts/docker.rst.txt
Docker Facts
------------


Facts about Docker containers, volumes and networks. These facts give you information from the view
of the current inventory host. See the :doc:`../connectors/docker` to use Docker containers as
inventory directly.

.. _facts:docker.DockerContainer:

:code:`docker.DockerContainer`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerContainer, object_id)

Returns ``docker inspect`` output for a single Docker container.


.. _facts:docker.DockerContainers:

:code:`docker.DockerContainers`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerContainers, )

Returns ``docker inspect`` output for all Docker containers.


.. _facts:docker.DockerImage:

:code:`docker.DockerImage`
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerImage, object_id)

Returns ``docker inspect`` output for a single Docker image.


.. _facts:docker.DockerImages:

:code:`docker.DockerImages`
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerImages, )

Returns ``docker inspect`` output for all Docker images.


.. _facts:docker.DockerNetwork:

:code:`docker.DockerNetwork`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerNetwork, object_id)

Returns ``docker inspect`` output for a single Docker network.


.. _facts:docker.DockerNetworks:

:code:`docker.DockerNetworks`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerNetworks, )

Returns ``docker inspect`` output for all Docker networks.


.. _facts:docker.DockerPlugin:

:code:`docker.DockerPlugin`
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerPlugin, object_id)

Returns ``docker plugin inspect`` output for a single Docker plugin.


.. _facts:docker.DockerPlugins:

:code:`docker.DockerPlugins`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerPlugins, )

Returns ``docker plugin inspect`` output for all Docker plugins.


.. _facts:docker.DockerSingleMixin:

:code:`docker.DockerSingleMixin`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerSingleMixin, object_id)


.. _facts:docker.DockerSystemInfo:

:code:`docker.DockerSystemInfo`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerSystemInfo, )

Returns ``docker system info`` output in JSON format.


.. _facts:docker.DockerVolume:

:code:`docker.DockerVolume`
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerVolume, object_id)

Returns ``docker inspect`` output for a single Docker container.


.. _facts:docker.DockerVolumes:

:code:`docker.DockerVolumes`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(DockerVolumes, )

Returns ``docker inspect`` output for all Docker volumes.

